[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nerfprobe-core"
version = "0.2.0"
description = "Shared probe and scorer implementations for LLM degradation detection"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["llm", "testing", "probes", "quantization", "degradation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "types-pyyaml>=6.0.12.20250915",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nerfprobe_core"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]  # Allow long lines in prompts and test strings

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "types-jsonschema>=4.25.1.20251009",
]
